java/jre: add container fixes related to graphic api calls
Some API calls like barcode renderers requires specific set of fonts and
libraries to be available in the container. This change is adding an
additional libs and fonts to the container to let the deployed apps use
these kind of APIs.

--- a/java11/jre/Dockerfile
+++ b/java11/jre/Dockerfile
@@ -8,5 +8,12 @@ RUN cp /usr/share/zoneinfo/Europe/Sofia /etc/localtime
 RUN echo "Europe/Sofia" > /etc/timezone
 RUN rm /etc/localtime
 
-# Add Bazel rules compatibility as they look only in /usr/bin/java.
+# libc.musl is required by the graphic libraries and they are messed
+# up in alpine. This commands are workaround of the issue described
+# at: https://github.com/AdoptOpenJDK/openjdk-docker/issues/75
+RUN apk add --no-cache fontconfig ttf-dejavu terminus-font && fc-cache -f
+RUN ln -s /lib/libc.musl-x86_64.so.1 /usr/lib/libc.musl-x86_64.so.1
+ENV LD_LIBRARY_PATH /usr/lib
+
+# Add Bazel rules compatibility as bazel looks only in /usr/bin/java.
 RUN ln -s /opt/java/openjdk/bin/java /usr/bin/java
