java11/jre: update to latest container version
The java11-jre is now updated to use the latest container version and
image is retagged for easy updates from the clients.

--- a/java11/jre/Makefile
+++ b/java11/jre/Makefile
@@ -1,5 +1,5 @@
 build:
-	docker build -t clouway/java11:jre-alpine .
+	docker buildx build --platform linux/amd64 -t clouway/java11:jre-alpine-20231113 .
 
 push:
-	docker push clouway/java11:jre-alpine
+	docker push clouway/java11:jre-alpine-20231113
