build: switch to use internal repositories

--- a/java11/jre/Makefile
+++ b/java11/jre/Makefile
@@ -1,5 +1,5 @@
 build:
-	docker buildx build --platform linux/amd64 -t clouway/java11:jre-alpine-20231113 .
+	docker buildx build --platform linux/amd64 -t europe-west3-docker.pkg.dev/cwregistry/base/java11:jre-alpine-20231113 .
 
 push:
-	docker push clouway/java11:jre-alpine-20231113
+	docker push europe-west3-docker.pkg.dev/cwregistry/base/java11:jre-alpine-20231113
